# google-contacts-birthdays-to-calendar

./: .gitignore  Cargo.toml  README.md
src/: main.rs
