[package]
name = "google-contacts-birthdays-to-calendar"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
ics = "0.5.8"
serde = {version = "1.0.219", features = ["derive"]}
chrono = {version = "0.4.40", features = ["serde"]}
anyhow = "1.0.97"
uuid = { version = "1.16.0", features = ["v4"] }
